fix bug where modal would not fit width of smaller screens

--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -58,7 +58,6 @@ hr {
   min-width: 100%;
   height: 40vh;
   display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   overflow: hidden;
   position: relative;
@@ -97,15 +96,13 @@ hr {
 .hovereffect img {
   @include aspect-ratio(16, 9);
   display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   position: relative;
   min-width: 100%;
   min-height: 100%;
   width: 100%;
   vertical-align: middle;
-  -ms-flex-item-align: center;
-      align-self: center;
+  align-self: center;
   -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
   transition: opacity 0.35s, transform 0.35s, -webkit-transform 0.35s;
   -webkit-transform: translate3d(-10px,0,0);
@@ -200,7 +197,7 @@ height: 95vh;
 border-radius: 0px 0px 40px 40px;
 @include breakpoint(small){
   margin: 0;
-  width: 100%;
+  width: 100vw;
 }
 .modal-header{
   padding: 0px;
@@ -236,7 +233,6 @@ border-radius: 0px 0px 40px 40px;
   .modal-desc{
     margin: auto;
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     max-width: 100%;
     max-height: 100%;
@@ -249,7 +245,6 @@ border-radius: 0px 0px 40px 40px;
     text-align: left;
     margin: auto;
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     position: relative;
     max-width: 100%;
@@ -260,7 +255,6 @@ border-radius: 0px 0px 40px 40px;
     text-align: left;
     margin: auto;
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     position: relative;
     max-width: 100%;
@@ -281,13 +275,10 @@ body.modal-open {
 
 
 .btn-primary.raised {
--webkit-box-shadow: 0 5px 0 0 #007299;
-        box-shadow: 0 5px 0 0 #007299;
+box-shadow: 0 5px 0 0 #007299;
 }
 .btn-primary.raised:active, .btn-primary.raised.active {
-
--webkit-box-shadow: none;
-        box-shadow: none;
+box-shadow: none;
 padding-bottom: -3px;
 padding-top: 3px;
 }
